[project]
name = "mcwhitelist-bot"
version = "0.1.0"
description = "Telegram bot for mcwhitelist"
requires-python = ">=3.12"
dependencies = [
  "aiogram==3.24.0",
  "asyncpg==0.31.0",
  "mcrcon==0.7.0",
  "python-dotenv==1.2.1",
]

[tool.ruff]
builtins = []
cache-dir = ".ruff_cache"
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "dist",
  "migrations",
  "node_modules",
  "venv",
  "manage.py",
]
extend-exclude = []
extend-include = []
fix = false
fix-only = false
force-exclude = true
include = ["*.py", "*.pyi", "*.ipynb", "**/pyproject.toml"]
indent-width = 4
line-length = 120
